# opensynod

./: .gitignore  LICENSE  README.md  env.example
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_panels.py  003_langgraph_checkpoints.py  004_add_general_discussion_panel.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  health.py  org.py  panels.py  sessions.py
backend/app/core/: config.py  logging.py  metrics.py  security.py  tracing.py
backend/app/db/: models.py  session.py
backend/app/llm/: __init__.py  anthropic_client.py  base.py  circuit_breaker.py  google_client.py  mock_client.py  ollama_client.py  openai_client.py  openai_compat_client.py  pricing.py  router.py
backend/app/orchestrator/: __init__.py  agent_runner.py  discussion.py  graph.py  moderator.py  schemas.py  state_machine.py  voting.py
backend/app/panels/: __init__.py  registry.py  schemas.py  seed_data.py
backend/app/tools/: base.py  mcp_client.py  rag_tool.py  registry.py  sanitizer.py  web_search.py
backend/app/workers/: arq_settings.py  discussion_worker.py
backend/app/ws/: __init__.py  events.py  gateway.py  redis_pubsub.py
backend/tests/api/: test_auth_api.py  test_security.py  test_sessions_api.py
backend/tests/llm/: test_anthropic_client.py  test_circuit_breaker.py  test_ollama_client.py  test_openai_client.py  test_pricing.py  test_router.py
backend/tests/orchestrator/: test_moderator.py  test_state_machine.py
backend/tests/panels/: test_panel_registry.py
backend/tests/tools/: test_registry.py  (+3 more)
(+67 files in other folders)
