[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "opensynod-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-genai>=1.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "langgraph>=0.2.0,<0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "coverage>=7.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
